# Sign-language-web-app

./: .replit  LICENSE  README.md  app.css  app.py  pyproject.toml  styles.css
